--- a/app/index.html
+++ b/app/index.html
@@ -80,7 +80,7 @@
                         </li>
                     -->
                         <li id="lnkGoodCauses"><a ng-href="#!/goodcauses">Good Causes</a></li>
-                        <!-- <li id="lnkVolunteer"><a ng-href="#!/volunteer">Volunteer</a></li> -->
+                        <li id="lnkVolunteer"><a ng-href="#!/volunteer">Volunteer</a></li>
                         <!-- <li id="lnkMusic"><a ng-href="#!/music">Music</a></li> -->
                         <!-- <li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Previous Years <span class="caret"></span></a>
